--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
     "date-fns": "^4.1.0",
-    "firebase": "^11.9.1",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.18.1",
-    "next": "15.3.4",
+    "next": "^15.3.4",
     "react": "^19.0.0",
     "react-compare-slider": "^3.1.0",
     "react-datepicker": "^8.4.0",
